--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body ng-controller="SessionController">
-  <nav ng-controller="NavigationController">
+<body ng-controller="MainController">
+  <nav>
     <%= link_to image_tag('grafff_spray_logo.png'), root_path, target: "_self", id: "logo" %>
     <form ng-submit="searchUsers()" ng-if="currentUser">
       <i class="fa fa-search"></i>
