--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -30,7 +30,7 @@ app.config(['$routeProvider', function($routeProvider){
     templateUrl: "<%= asset_path('pages/artwork/show.html') %>"
   })
   .when('/search', {
-    controller: 'SearchResultsController',
+    controller: 'SearchController',
     templateUrl: "<%= asset_path('pages/search/index.html') %>"
   })
   .otherwise({
