--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,7 @@
+<nav>
+  <%= link_to image_tag('grafff_spray_logo.png'), root_path, target: "_self", id: "logo" %>
+</nav>
+
 <div id="form-wrapper">
 
   <h2>Sign up</h2>
