Add styling to 'add artwork' form

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -33,3 +33,22 @@
     }
   }
 }
+
+
+
+/* New artwork form */
+
+.field {
+  margin-bottom: 20px;
+}
+
+.actions {
+  .btn {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+.new-artwork-form-address {
+  float: right;
+}
