Add Angular UI Bootstrap

--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -3,7 +3,8 @@ var app = angular.module('grafffApp', [
   'ngRoute',
   'ngResource',
   'ngMap',
-  'angularMoment'
+  'angularMoment',
+  'ui.bootstrap'
 ]);
 
 app.config(['$routeProvider', function($routeProvider){
