Tweak style and positioning of datepicker

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -39,6 +39,10 @@
   li .close {
     margin: -3px 5px 10px 0;
   }
+
+  .ng-isolate-scope table {
+    outline: 0;
+  }
 }
 
 .fa-chevron-left, .fa-chevron-right {
