--- a/app/assets/templates/pages/home/index.html
+++ b/app/assets/templates/pages/home/index.html
@@ -6,7 +6,7 @@
   styles="[{'featureType':'landscape','elementType':'labels','stylers':[{'visibility':'off'}]},{'featureType':'poi','elementType':'labels','stylers':[{'visibility':'off'}]},{'featureType':'road','elementType':'geometry','stylers':[{'lightness':57}]},{'featureType':'road','elementType':'labels.text.fill','stylers':[{'visibility':'on'},{'lightness':24}]},{'featureType':'road','elementType':'labels.icon','stylers':[{'visibility':'off'}]},{'featureType':'transit','elementType':'labels','stylers':[{'visibility':'off'}]},{'featureType':'water','elementType':'labels','stylers':[{'visibility':'off'}]}]">
 
   <div class="date-search">
-    <h4>Filter by date</h4>
+    <p><strong>Display artwork by month created</strong></p>
     <div class="map-date-picker">
       <p class="input-group">
         <input
@@ -27,8 +27,9 @@
   </div>
 
   <div ng-repeat="artwork in mapArtwork">
-    <marker id="{{ artwork.id }}" on-click="showInfoWindow(event, artwork.id)"
-      position="{{ artwork.lat }}, {{ artwork.lng }}">
+    <marker on-click="showInfoWindow(event, artwork.id)"
+      position="{{ artwork.lat }}, {{ artwork.lng }}"
+      animation="DROP">
     </marker>
 
     <info-window id="{{ artwork.id }}" position="{{ artwork.lat }}, {{ artwork.lng }}" visible-on-marker="{{ artwork.id }}">
