--- a/app/assets/templates/pages/home/index.html
+++ b/app/assets/templates/pages/home/index.html
@@ -17,6 +17,7 @@
         is-open="opened"
         datepicker-options="dateOptions"
         date-disabled="disabled(date, mode)"
+        init-date="null"
         ng-required="true"
         close-text="Close" />
         <span class="input-group-btn">
