--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,40 +1,1 @@
-<div class="landing-page-image">
-  <div class="welcome-message">
-    <div class="welcome-text">
-      <%= image_tag 'https://s3-eu-west-1.amazonaws.com/grafff/grafff_logo.svg' %>
-      <h4>Please log in or sign up to continue.</h4>
-    </div>
-    <%= button_tag "Log In", class: 'btn btn-primary', data: { toggle: 'modal', target: '#log-in' } %>
-    <%= button_tag "Sign Up", class: 'btn btn-success', data: { toggle: 'modal', target: '#sign-up' } %>
-  </div>
-
-  <!-- Modal Log In -->
-  <div class="modal custom-log-in" id="log-in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Log In</h4>
-        </div>
-        <div class="modal-body">
-          <%= render "devise/sessions/new" %>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal Sign Up -->
-  <div class="modal custom-sign-in" id="sign-up" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
-        </div>
-        <div class="modal-body">
-          <%= render "devise/registrations/new" %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<ng-view></ng-view>
