--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,9 @@
 </head>
 
 <body ng-controller="MainController">
-  <% if user_signed_in? %>
     <nav>
       <%= link_to image_tag('grafff_spray_logo.png'), root_path, target: "_self", id: "logo" %>
-      <form ng-submit="searchUsers()" ng-if="currentUser">
+      <form ng-submit="searchUsers()">
         <i class="fa fa-search"></i>
         <input id="search-input" placeholder="Search users and artists">
       </form>
@@ -30,7 +29,6 @@
         </ul>
       <% end %>
     </nav>
-  <% end %>
   
   <div id="main-content">
     <% if !user_signed_in? %>
