--- a/app/assets/templates/pages/artwork/show.html
+++ b/app/assets/templates/pages/artwork/show.html
@@ -23,7 +23,7 @@
       </div>
       
       <div ng-if="(artwork.user.id !== currentUser.id) && !currentUser.is_artist"><!-- Likes -->
-        <button class="btn btn-primary" ng-hide="likeThisArtwork" ng-click="likeArtwork()">Like</button>
+        <button ng-disabled="!currentUser" class="btn btn-primary" ng-hide="likeThisArtwork" ng-click="likeArtwork()">Like</button>
         <button class="btn btn-primary" ng-show="likeThisArtwork" ng-click="unlikeArtwork()">Unlike</button>
         <p>Likes: {{ artworkLikes.length }}</p>
       </div>
@@ -32,7 +32,7 @@
         <h3>Comments: ({{ artworkComments.length }})</h3>
         <div><!-- Comment field -->
           <form ng-keypress="($event.which === 13) ? postComment(commentContent, artwork.id) : 0">
-            <textarea id="comment-field" class="form-control" ng-model="commentContent" placeholder="Write a commment" ></textarea>
+            <textarea ng-disabled="!currentUser" id="comment-field" class="form-control" ng-model="commentContent" placeholder="Write a commment" ></textarea>
           </form>
         </div>
 
