--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -14,6 +14,10 @@ app.config(['$routeProvider', function($routeProvider){
     controller: 'IndexController',
     templateUrl: "<%= asset_path('pages/home/index.html') %>"
   })
+  .when('/main-map', {
+    controller: 'MainMapController',
+    templateUrl: "<%= asset_path('pages/map/index.html') %>"
+  })
   .when('/artists', {
     controller: 'UserIndexController',
     templateUrl: "<%= asset_path('pages/user/index.html') %>"
