Add main-map styling

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -8,8 +8,8 @@ a:hover {
   text-decoration: none;
 }
 
-body {
-  height: 100%;
+body, html, #main-content {
+  height: 97.4%;
 }
 
 #main-content, footer {
