--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,8 +1,7 @@
 @import 'colors';
 
 #main-map {
-  position: relative;
-  height: 700px;
+  height: 100%;
 
   .date-search {
     position: absolute;
