Display all artwork markers on main-map page load, make drop animation faster

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -30,15 +30,15 @@
 
 .dropdown-menu {
   position: absolute;
-  top: 455px !important;
+  top: 505px !important;
   width: 284px;
 
-  li .pull-left button {
+  li .pull-left p {
     margin: -5px 0 10px;
   }
 
   li .close {
-    margin: -3px 5px 10px 0;
+    margin: -7px 5px 10px 0;
   }
 
   .ng-isolate-scope table {
