Add index header copy and button link to main map

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,6 +9,36 @@
   background-repeat: no-repeat;
   background-position: center center;
   margin-bottom: 65px;
+  padding-top: 170px;
+  text-align: center;
+}
+
+.intro {
+  width: 60%;
+  margin: 0 auto;
+}
+
+#index-welcome {
+  margin-bottom: 50px;
+  color: #fff;
+  font-size: 50px;
+  line-height: 1.15;
+  letter-spacing: -1px;
+}
+
+.index-map-btn {
+  padding: 18px 38px;
+  border: 1px solid #fff;
+  border-radius: 30px;
+  font-size: 16px;
+  color: #fff;
+  transition: .3s;
+}
+
+.index-map-btn:hover {
+  color: #fff;
+  background: rgba(255, 255, 255, .25);
+  transition: .3s;
 }
 
 
