--- a/app/assets/templates/pages/home/index.html
+++ b/app/assets/templates/pages/home/index.html
@@ -1,5 +1,8 @@
 <div class="index-header">
-  
+  <div class="intro">
+    <h1 id="index-welcome"><strong>Welcome to Grafff, an online community for street art.</strong></h1>
+    <a ng-href="#/main-map" class="index-map-btn">View Map</a>
+  </div>
 </div>
 
 <div id="wrapper">
