--- a/app/assets/templates/pages/home/index.html
+++ b/app/assets/templates/pages/home/index.html
@@ -1,11 +1,16 @@
 <div class="index-header">
-  <div class="intro">
+  <div class="index-intro-wrapper">
     <h1 id="index-welcome"><strong>Welcome to Grafff, an online community for street art.</strong></h1>
     <a ng-href="#/main-map" class="index-map-btn">View Map</a>
   </div>
 </div>
 
 <div id="wrapper">
+  <div id="index-intro">
+    <p class="index-intro-section-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem temporibus necessitatibus, explicabo? Ea totam cupiditate, magni necessitatibus? Nesciunt iste eum error odio. Labore vero excepturi distinctio mollitia doloribus sit quibusdam.</p>
+    <p class="index-intro-section-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem temporibus necessitatibus, explicabo? Ea totam cupiditate, magni necessitatibus? Nesciunt iste eum error odio. Labore vero excepturi distinctio mollitia doloribus sit quibusdam.</p>
+  </div>
+
   <div class="card-container">
     <div class="whats-new-header">
       <div class="row">
