--- a/app/assets/templates/pages/map/index.html
+++ b/app/assets/templates/pages/map/index.html
@@ -12,6 +12,7 @@
         <input
         type="text"
         class="form-control" 
+        datepicker-popup-custom
         datepicker-popup="MMMM-yyyy"
         ng-model="dt"
         is-open="opened"
