--- a/app/assets/javascripts/grafff_app/directives/directives.js.erb
+++ b/app/assets/javascripts/grafff_app/directives/directives.js.erb
@@ -30,7 +30,7 @@ app.directive('validFile', function() {
   }
 });
 
-app.directive('datepickerPopupCustom', function(SearchFactory, $timeout) {
+app.directive('datepickerPopupCustom', ['SearchFactory', '$timeout', function(SearchFactory, $timeout) {
 
   return {
     require: 'ngModel',
@@ -56,7 +56,7 @@ app.directive('datepickerPopupCustom', function(SearchFactory, $timeout) {
     }
   }
 
-});
+}]);
 
 // scope.$watch(function($parent) {
 //   return ngModel.$modelValue;
