--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 <body ng-controller="MainController">
     <nav>
-      <%= link_to image_tag('grafff_spray_logo.png'), root_path, target: "_self", id: "logo" %>
+      <%= link_to image_tag('grafff_logo.svg'), root_path, target: "_self", id: "logo" %>
       <form ng-submit="searchUsers()">
         <i class="fa fa-search"></i>
         <input id="search-input" placeholder="Search users and artists">
