--- a/app/assets/templates/pages/home/index.html
+++ b/app/assets/templates/pages/home/index.html
@@ -64,6 +64,10 @@
         </a>
       </div>
     </div>
+  </div>
 
+  <div id="index-outro">
+    <p class="index-outro-section-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem temporibus necessitatibus, explicabo? Ea totam cupiditate, magni necessitatibus? Nesciunt iste eum error odio. Labore vero excepturi distinctio mollitia doloribus sit quibusdam.</p>
+    <a href="/users/sign_in#/" id="index-signup-btn">Sign Up</a>
   </div>
 </div>
