--- a/app/assets/templates/pages/map/index.html
+++ b/app/assets/templates/pages/map/index.html
@@ -6,7 +6,8 @@
   styles="[{'featureType':'administrative','elementType':'labels.text.fill','stylers':[{'color':'#444444'}]},{'featureType':'landscape','elementType':'all','stylers':[{'color':'#f2f2f2'}]},{'featureType':'poi','elementType':'all','stylers':[{'visibility':'off'}]},{'featureType':'road','elementType':'all','stylers':[{'saturation':-100},{'lightness':45}]},{'featureType':'road.highway','elementType':'all','stylers':[{'visibility':'simplified'}]},{'featureType':'road.arterial','elementType':'labels.icon','stylers':[{'visibility':'off'}]},{'featureType':'transit','elementType':'all','stylers':[{'visibility':'off'}]},{'featureType':'water','elementType':'all','stylers':[{'color':'#46bcec'},{'visibility':'on'}]}]">
 
   <div class="date-search">
-    <p><strong>Display artwork by month created</strong></p>
+    <p class="date-picker-title">Filter by month created</p>
+    <a ng-href="#/artworks" class="btn btn-primary btn-sm">View list</a>
     <div class="map-date-picker">
       <p class="input-group">
         <input
