--- a/app/assets/templates/pages/artwork/index.html
+++ b/app/assets/templates/pages/artwork/index.html
@@ -3,6 +3,7 @@
     <div class="all-artworks-header">
       <div class="row">
         <h3 class="col-md-4">All Artworks</h3>
+        <p id="main-map-btn" class="col-md-4 col-md-offset-4"><a ng-href="#/main-map" class="btn btn-default">Main map</a></p>
       </div>
     </div>
 
